--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/assets/use.fontawesome.com/releases/v5.15.3/css/all.css">
-    <link rel="stylesheet" href="./src/assets/css/libraries.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
-    <title>AGCL React</title>
-  </head>
-  <body>
-    <div id="root"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/assets/use.fontawesome.com/releases/v5.15.3/css/all.css">
+  <link rel="stylesheet" href="./src/assets/css/libraries.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+  <title>AGCL React</title>
+</head>
+
+<body>
+  <div id="root"></div>
 
 
-    <script src="./src/assets/js/jquery-3.5.1.min.js"></script>
-    <script src="./src/assets/js/plugins.js"></script>
+  <script src="./src/assets/js/jquery-3.5.1.min.js"></script>
+  <script src="./src/assets/js/plugins.js"></script>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+  <script src="./src/assets/js/main.js"></script>
+  <!-- <script type="module" src="/src/assets/js/custom.js"></script> -->
+  <script type="module" src="/src/main.jsx"></script>
 
-    <script src="./src/assets/js/main.js"></script>
 
-    <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/src/assets/js/custom.js"></script>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
       AOS.init({
         offset: 0,
         duration: 1800,
@@ -50,6 +48,32 @@
         AOS.refresh();
       }
     });
-    </script>
-  </body>
+  </script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      // Add animation for the first slide on page load
+      const firstSlideText = document.querySelector('.slick-active .slide__body');
+      if (firstSlideText) {
+        firstSlideText.classList.add('animate');
+      }
+
+      // Add event listener for slider change
+      $('.slick-carousel').on('afterChange', function () {
+        // Remove animation class from all slides
+        document.querySelectorAll('.slide__body').forEach((el) => {
+          el.classList.remove('animate');
+        });
+
+        // Add animation class to the current active slide
+        const currentSlideText = document.querySelector('.slick-active .slide__body');
+        if (currentSlideText) {
+          currentSlideText.classList.add('animate');
+        }
+      });
+    });
+
+  </script>
+</body>
+
 </html>
