--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <script src="./src/assets/js/jquery-3.5.1.min.js"></script>
-  <script src="./src/assets/js/plugins.js"></script>
+  <!-- <script src="./src/assets/js/plugins.js"></script> -->
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
